--- a/index.html
+++ b/index.html
@@ -6,20 +6,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flex-box</title>
   <link rel="stylesheet" href="/css/estilo.css">
+  <style>
+    *{
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+       font-family: Arial, Helvetica, sans-serif;
+    }
+
+    header, footer {
+      background-color: antiquewhite;
+      padding: 10px;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: row;
+      min-height: 400px;
+    }
+
+    .menu {
+      background-color: palevioletred;
+      width: 20%;
+      padding: 10px;
+    }
+
+    .content {
+      background-color: lightpink;
+      width: 60%;
+      padding: 10px;
+    }
+
+    .ads {
+      background-color: lightpink;
+      width: 20%;
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .ads div {
+      background-color: bisque;
+      height: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color:black;
+    }
+
+    footer {
+      background-color:lightcoral;
+      padding: 10px;
+      text-align: center;
+    }
+
+    .menu ul {
+      list-style-type: none;
+      margin-top: 10px;
+    }
+
+    .menu li {
+      margin: 5px 0;
+      background:#ddd;
+      padding: 5px;
+    }
+
+  </style>
 </head>
 
 <body>
   <div id="container">
     <div id="menu">
+      <strong>Menu</strong>
       <ul>
         <li class="item"><a href="/index.html">01</a></li>
         <li class="item"><a href="/02.html">02</a></li>
         <li class="item"><a href="/03.html">03</a></li>
       </ul>
-    </div>
-    <div id="layout">
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
-    </div>
+    
+      <main class="content">
+        <strong>Content</strong>
+        <p> Foi com Badalasom que me apaixonei
+Fazendo o chifrinho com você, meu bem
+DJs Rafael, Josias e Darlan
+Eles dão a chicotada do amor
+
+É o Búfalo do Marajó, é o Búfalo do Marajó
+Tocando o berrante, você vai entender
+Que o meu amor é só pra você
+É o Búfalo do Marajó, é o Búfalo do Marajó
+Tocando o berrante, você vai entender
+Que o meu amor é só pra você </p>
+      </main>
+
+      <aside class="ads">
+        <div><a href= "imgs/baroes da pisadinha.jpg">Barões da pisadinha</a></div>
+        <div><a href= "imgs/búfalo.jpg">Búfalo</a></div>
+      </aside>
+   </div>
+  
+   <footer>Footer</footer>
   </div>
 </body>
 
