--- a/03.html
+++ b/03.html
@@ -3,25 +3,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flex-box</title>
-  <link rel="stylesheet" href="/css/estilo.css">
+  <title>Layout 3</title>
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
   <div id="container">
     <div id="menu">
       <ul>
-        <li class="item"><a href="/index.html">01</a></li>
-        <li class="item"><a href="/02.html">02</a></li>
-        <li class="item"><a href="/03.html">03</a></li>
+        <li class="item"><a href="/index.html">Início</a></li>
+        <li class="item"><a href="/02.html">Layout 2</a></li>
+        <li class="item"><a href="/03.html">Layout 3</a></li>
       </ul>
     </div>
     <div id="layout">
 
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
-    </div>
-  </div>
+<div id="layout" class="layout3">
+<div class="grid">
+<div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div>
+<div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div>
+<div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div>
+<div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div>
+<div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div>
+<div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div><div class="cell dark"></div><div class="cell"></div>
+</div>
+</div>
 </body>
-
 </html>
